--- a/_posts/web/2014-3-25-https.markdown
+++ b/_posts/web/2014-3-25-https.markdown
@@ -64,11 +64,11 @@ ssl层的建立过程：
 然后，生成服务器端的密钥，并通过“第三法机构”获取证书。
 
 	$ openssl genrsa -out server.key 1024
-	$ openssl rsa -in client.key -pubout -out client.pem	
+	$ openssl rsa -in server.key -pubout -out server.pem	
 	$ openssl req -new -key server.key -out server.csr
 	$ openssl x509 -req -CA ca.crt -CAkey ca.key -CAcreateserial -in server.csr -out server.crt
 
-注意，在第三步生成授权请求文件ca.csr时，要指定server名。否则授权文件无效。比如，此处指定为"localhost",因为
+注意，在第三步生成授权请求文件server.csr时，要指定server名。否则授权文件无效。比如，此处指定为"localhost",因为
 客户端需要这个字段来验证服务器的真实行。
 
 服务器端代码：
