fix some markdown bug

--- a/_posts/algorithm/2013-01-30-trie.markdown
+++ b/_posts/algorithm/2013-01-30-trie.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "基于trie树的AC多模匹配算法"
 date:   2014-01-30 15:36:55
 categories: algorithm  
-tag: ["algorithm","trie树"，"模式匹配"]
+tag: ["algorithm", "trie树", "模式匹配"]
 ---
 	class Trie:
 		"""用来存储关键词和进行多模匹配  """
